--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
 	
@@ -57,7 +59,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/profile-pics.jpg);"></div>
-				<h1 id="colorlib-logo"><a href="index.html">Adeyemi Ayomide Wilfred</a></h1>
+				<h1 id="colorlib-logo"><a href="index.html">Ayomide Wilfred Adeyemi</a></h1>
 				<span class="position"><a href="#">Backend Developer</a></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -78,7 +80,7 @@
 
 			<div class="colorlib-footer">
 				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright <script>document.write(new Date().getFullYear());</script> All rights reserved. Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="#" target="_blank">Ayomide Wilfred</a>
+Copyright <script>document.write(new Date().getFullYear());</script> All rights reserved. Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://linkedin.com/in/ayomide-wilfred-95083a104/" target="_blank">Ayomide Wilfred</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </p>
 				<ul>
 					<li><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -102,7 +104,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Ayomide Wilfred</h1>
-						   					<h2>Designing,building,and maintaining APIs and services <a href="#" target="_blank">Adeyemi Ayomide Wilfred</a></h2>
+						   					<h2>Designing,building,and maintaining APIs and services <a href="#" target="_blank">Ayomide Wilfred Adeyemi</a></h2>
 											   <p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1oNjrt9wem0yp6lKcdrNd-ojyBenof4i4/view?usp=sharing" target="_blank">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
@@ -140,9 +142,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Ayomide Wilfred</strong>  an experienced backend developer. My journey in the world of coding has been an exciting adventure, filled with challenges and triumphs.</p>
-										<p>I specialize in developing and maintaining scalable and efficient RESTful APIs using Node.js, Sequelize, and MySQL, adhering to clean architecture principles for improved maintainability</p>
-										<p>With a keen eye for detail and a commitment to staying updated with the latest technologies, I strive to deliver high-quality solutions that meet the unique needs of each project. Let's build something amazing together!</p>
+										<p><strong>Hi I'm Ayomide Wilfred</strong>, an experienced backend developer with a proven track record of delivering high-quality solutions. My expertise lies in designing, building, and maintaining scalable and efficient backend systems.</p>
+										<p>I specialize in developing and maintaining scalable and efficient RESTful APIs using Node.js, Express, Sequelize, Postgres, MySQL, and Docker, adhering to clean architecture principles for improved maintainability.</p>
+										<p>In addition to my experience in software development, I am also a researcher and technical writer. I have a deep passion for robotics, artificial intelligence, and smart systems, with a focus on advancing innovation in these fields.</p>
 									</div>
 								</div>
 							</div>
@@ -260,8 +262,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>AWS & Azure <br>Cloud Deployment</h3>
-									<p>Leverage cloud services like AWS Amplify, ECS, and Azure to deploy, manage, and scale applications efficiently.</p>
+									<h3>AWS,Azure & Digital Ocean <br>Cloud Deployment</h3>
+									<p>Leverage cloud services like AWS Amplify, ECS, Digital Ocean app plaform and Azure to deploy, manage, and scale applications efficiently.</p>
 								</div>
 							</div>
 						</div>
@@ -412,7 +414,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>AWS & Azure</h3>
+								<h3>AWS, Azure & Digital Ocean</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -510,25 +512,22 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					               </div>
 					               <div class="timeline-label">
 									<h2><a href="#"> Backend Engineer at Uwana Energy</a> <span>June 2024 - Present</span></h2>
-									<p>As a Backend Developer at Uwana Energy, I am responsible for building APIs for features such as financing, product management, lead capturing, and chatbot integration. I design and implement database models and adhere to clean architecture principles to ensure maintainable and clean code. Additionally, I set up and maintain AWS cloud services, including Amplify, ECS, S3 buckets, and Code Pipelines, to support and optimize our infrastructure. </p>
+									<p>As a Backend Developer at Uwana Energy, I am responsible for building APIs for features such as financing & payment integration, product management, lead capturing, referrals, ecommerce features and chatbot integration. I design and implement database models and adhere to clean architecture principles to ensure maintainable and clean code. Additionally, I set up and maintain AWS cloud services, including Amplify, ECS, S3 buckets, and Code Pipelines, to support and optimize our infrastructure. </p>
 					               </div>
 					            </div>
 					         </article>
 
-					         <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-3">
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#"> Frontend Engineer at NLPC PFA</a> <span>Dec 2023 - Aug 2024</span></h2>
-					                  <p> Led cross-functional teams in developing intuitive user interfaces, User engagement increased by 25% as
-										a result. Implemented best practices in web development, leading to a 40% improvement in scalability.
-										Utilized cutting-edge technologies to automate pension fund processes, delivering high-quality software
-										products that met organizational objectives</p>
+					               	<h2><a href="#"> Backend Engineer at Sokozuri</a> <span>   Contract</span></h2>
+					                  <p> I was responsible for building the sokozuri backend system which includes authentication, vendor features, product management, order management, payment gateway integration, and email & sms notification. I was also responsible for setting up and maintaining both the frontend and backend infrastructure on Digital Ocean app plaform</p>
 					               </div>
 					            </div>
-					         </article> -->
+					         </article>
 
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
 					            <div class="timeline-entry-inner">
@@ -599,12 +598,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/cleaning.PNG);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://norriscolecleaningservice.vercel.app/">Work 02</a></h3>
+										<h3><a href="https://norriscolecleaningservice.vercel.app/" target="_blank">Work 02</a></h3>
 										<span>Norriscole Cleaning service</span>
 										<p class="icon">
-											<span><a href="https://norriscolecleaningservice.vercel.app/"><i class="icon-share3"></i></a></span>
-											<span><a href="https://norriscolecleaningservice.vercel.app/"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="https://norriscolecleaningservice.vercel.app/"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://norriscolecleaningservice.vercel.app/" target="_blank"><i class="icon-share3"></i></a></span>
+											<span><a href="https://norriscolecleaningservice.vercel.app/" target="_blank"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://norriscolecleaningservice.vercel.app/" target="_blank"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
@@ -614,12 +613,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/pis.PNG); border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://www.pisonitsha.com/">Work 03</a></h3>
+										<h3><a href="https://www.pisonitsha.com/" target="_blank">Work 03</a></h3>
 										<span>Promise International School</span>
 										<p class="icon">
-											<span><a href="https://www.pisonitsha.com/"><i class="icon-share3"></i></a></span>
-											<span><a href="https://www.pisonitsha.com/"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="https://www.pisonitsha.com/"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://www.pisonitsha.com/" target="_blank"><i class="icon-share3"></i></a></span>
+											<span><a href="https://www.pisonitsha.com/" target="_blank"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://www.pisonitsha.com/" target="_blank"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
@@ -629,12 +628,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/tanta.PNG); border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://tantainnovatives.com/">Work 04</a></h3>
+										<h3><a href="https://sokozuri-vendor-app-poj3b.ondigitalocean.app/" target="_blank">Work 04</a></h3>
 										<span>Tanta Innovatives Limited</span>
 										<p class="icon">
-											<span><a href="https://tantainnovatives.com"><i class="icon-share3"></i></a></span>
-											<span><a href="https://tantainnovatives.com"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="https://tantainnovatives.com"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://sokozuri-vendor-app-poj3b.ondigitalocean.app/" target="_blank"><i class="icon-share3"></i></a></span>
+											<span><a href="https://sokozuri-vendor-app-poj3b.ondigitalocean.app/" target="_blank"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://sokozuri-vendor-app-poj3b.ondigitalocean.app/" target="_blank"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
@@ -644,12 +643,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/burtech.PNG);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://burtechproducts.com/">Work 05</a></h3>
+										<h3><a href="https://burtechproducts.com/" target="_blank">Work 05</a></h3>
 										<span>Burtech Products</span>
 										<p class="icon">
-											<span><a href="https://burtechproducts.com/"><i class="icon-share3"></i></a></span>
-											<span><a href="https://burtechproducts.com/"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="https://burtechproducts.com/"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://burtechproducts.com/" target="_blank"><i class="icon-share3"></i></a></span>
+											<span><a href="https://burtechproducts.com/" target="_blank"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://burtechproducts.com/" target="_blank"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
@@ -825,19 +824,28 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						<div class="col-md-5">
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
-									<i class="icon-globe-outline"></i>
+									<i class="fa fa-twitter"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">ayowilfred1995@gmail.com</a></p>
+									<p><a href="https://x.com/AyomideWilfred9" target="_blank">Twitter</a></p>
 								</div>
 							</div>
 
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
-									<i class="icon-map"></i>
+									<i class="fa fa-linkedin-square"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>Lagos, Nigeria</p>
+									<p><a href="https://www.linkedin.com/in/ayomide-wilfred-95083a104/" target="_blank">linkedIn</a></p>
+								</div>
+							</div>
+
+							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="colorlib-icon">
+									<i class="fa fa-github"></i>
+								</div>
+								<div class="colorlib-text">
+									<p><a href="https://github.com/ayowilfred95" target="_blank">Github</a></p>
 								</div>
 							</div>
 
