--- a/index.html
+++ b/index.html
@@ -625,11 +625,11 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-							<div class="project" style="background-image: url(images/tanta.PNG); border: 1px solid #cdcdcd;">
+							<div class="project" style="background-image: url(images/tanta.png); border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="https://sokozuri-vendor-app-poj3b.ondigitalocean.app/" target="_blank">Work 04</a></h3>
-										<span>Tanta Innovatives Limited</span>
+										<span>Sokozuri</span>
 										<p class="icon">
 											<span><a href="https://sokozuri-vendor-app-poj3b.ondigitalocean.app/" target="_blank"><i class="icon-share3"></i></a></span>
 											<span><a href="https://sokozuri-vendor-app-poj3b.ondigitalocean.app/" target="_blank"><i class="icon-eye"></i> 100</a></span>
@@ -640,7 +640,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/burtech.PNG);border: 1px solid #cdcdcd;">
+							<div class="project" style="background-image: url(images/burtech.png);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="https://burtechproducts.com/" target="_blank">Work 05</a></h3>
