Added gitlab icon to contact

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/profile-pics.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Ayomide Wilfred Adeyemi</a></h1>
-				<span class="position"><a href="#">Backend Developer</a></span>
+				<span class="position"><a href="https://gitlab.com/ayowilfred95" target="_blank">Backend Developer</a></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -851,10 +851,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
-									<i class="icon-phone"></i>
+									<i class="fa fa-gitlab"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://">+234 814 383 9812</a></p>
+									<p><a href="https://gitlab.com/ayowilfred95" target="_blank">Gitlab</a></p>
 								</div>
 							</div>
 						</div>
