--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						<div class="col-md-5">
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
-									<i class="fa fa-twitter"></i>
+									<a href="https://x.com/AyomideWilfred9" target="_blank"><i class="fa fa-twitter"></i></a>
 								</div>
 								<div class="colorlib-text">
 									<p><a href="https://x.com/AyomideWilfred9" target="_blank">Twitter</a></p>
@@ -833,7 +833,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
-									<i class="fa fa-linkedin-square"></i>
+									<a href="https://www.linkedin.com/in/ayomide-wilfred-95083a104/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
 								</div>
 								<div class="colorlib-text">
 									<p><a href="https://www.linkedin.com/in/ayomide-wilfred-95083a104/" target="_blank">linkedIn</a></p>
@@ -842,7 +842,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
-									<i class="fa fa-github"></i>
+									<a href="https://github.com/ayowilfred95" target="_blank"><i class="fa fa-github"></i></a>
 								</div>
 								<div class="colorlib-text">
 									<p><a href="https://github.com/ayowilfred95" target="_blank">Github</a></p>
@@ -851,7 +851,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
-									<i class="fa fa-gitlab"></i>
+									<a href="https://gitlab.com/ayowilfred95" target="_blank"><i class="fa fa-gitlab"></i></a>
 								</div>
 								<div class="colorlib-text">
 									<p><a href="https://gitlab.com/ayowilfred95" target="_blank">Gitlab</a></p>
