Refactor the code

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Ayomide Wilfred</h1>
 						   					<h2>Designing,building,and maintaining APIs and services <a href="#" target="_blank">Ayomide Wilfred Adeyemi</a></h2>
-											   <p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1oNjrt9wem0yp6lKcdrNd-ojyBenof4i4/view?usp=sharing" target="_blank">Download CV <i class="icon-download4"></i></a></p>
+											   <p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1fS4KR2wl-qxFSwAuMLtEAz1yXUgfJ5EF/view?usp=sharing" target="_blank">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -121,7 +121,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   					<div class="desc">
 						   					<h1>I am <br>a Backend Developer</h1>
 											   <h2>Designing,building,and maintaining APIs and services <a href="https://yourportfolio.com/" target="_blank">Adeyemi Ayomide Wilfred</a></h2>
-											   <p><a class="btn btn-primary btn-learn">Explore My Work <i class="icon-briefcase3"></i></a></p>
+											   <p><a class="btn btn-primary btn-learn"  href="https://github.com/ayowilfred95/" target="_blank"> Explore My Work <i class="icon-briefcase3"></i></a></p>
 											   
 											</div>
 					   				</div>
@@ -523,7 +523,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#"> Backend Engineer at Sokozuri</a> <span>   Contract</span></h2>
+					               	<h2><a href="#"> Backend Engineer at Sokozuri</a> <span>   Aug 2023 - Present</span></h2>
 					                  <p> I was responsible for building the sokozuri backend system which includes authentication, vendor features, product management, order management, payment gateway integration, and email & sms notification. I was also responsible for setting up and maintaining both the frontend and backend infrastructure on Digital Ocean app plaform</p>
 					               </div>
 					            </div>
@@ -535,7 +535,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Backend Developer at NUPAT TECHNOLOGIES</a> <span>Sep 2022 - May 2024</span></h2>
+					               	<h2><a href="#">Backend Developer at NUPAT TECHNOLOGIES</a> <span>Sep 2022 - Feb 2023</span></h2>
 					                  <p>As a Backend Developer at Nupat Technologies, I am responsible for building and designing APIs for a school management portal. I facilitate students in backend development and DevOps, and assist the frontend team with API integration. Additionally, I manage the deployment of applications to Azure cloud services, including Azure Container Registry (ACR), Azure Kubernetes Service (AKS), Blob Storage, and Azure DevOps for CI/CD pipelines.</p>
 					               </div>
 					            </div>
@@ -547,7 +547,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Backend Developer at Qoinpal</a> <span>May 2021 - Oct 2022</span></h2>
+					               	<h2><a href="#">Backend Developer at Qoinpal</a> <span>May 2021 - July 2022</span></h2>
 					                  <p>As a Backend Developer at Qoinpal, I was responsible for building APIs and designing database models. I dockerized the application, which included developing a cryptocurrency disposable address generator and implementing authentication mechanisms. </p>
 					               </div>
 					            </div>
@@ -595,15 +595,15 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/cleaning.PNG);border: 1px solid #cdcdcd;">
+							<div class="project" style="background-image: url(images/sokozuri-reg.png);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://norriscolecleaningservice.vercel.app/" target="_blank">Work 02</a></h3>
-										<span>Norriscole Cleaning service</span>
+										<h3><a href="https://dashboard.sokozuri.com/signup" target="_blank">Work 02</a></h3>
+										<span>Sokozuri</span>
 										<p class="icon">
-											<span><a href="https://norriscolecleaningservice.vercel.app/" target="_blank"><i class="icon-share3"></i></a></span>
-											<span><a href="https://norriscolecleaningservice.vercel.app/" target="_blank"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="https://norriscolecleaningservice.vercel.app/" target="_blank"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://dashboard.sokozuri.com/signup" target="_blank"><i class="icon-share3"></i></a></span>
+											<span><a href="https://dashboard.sokozuri.com/signup" target="_blank"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://dashboard.sokozuri.com/signup" target="_blank"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
@@ -628,87 +628,72 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/tanta.png); border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://sokozuri-vendor-app-poj3b.ondigitalocean.app/" target="_blank">Work 04</a></h3>
+										<h3><a href="https://dashboard.sokozuri.com/" target="_blank">Work 04</a></h3>
 										<span>Sokozuri</span>
 										<p class="icon">
-											<span><a href="https://sokozuri-vendor-app-poj3b.ondigitalocean.app/" target="_blank"><i class="icon-share3"></i></a></span>
-											<span><a href="https://sokozuri-vendor-app-poj3b.ondigitalocean.app/" target="_blank"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="https://sokozuri-vendor-app-poj3b.ondigitalocean.app/" target="_blank"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://dashboard.sokozuri.com/" target="_blank"><i class="icon-share3"></i></a></span>
+											<span><a href="https://dashboard.sokozuri.com/" target="_blank"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://dashboard.sokozuri.com/" target="_blank"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/burtech.png);border: 1px solid #cdcdcd;">
+							<div class="project" style="background-image: url(images/uwana-blog.png);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://burtechproducts.com/" target="_blank">Work 05</a></h3>
-										<span>Burtech Products</span>
+										<h3><a href="https://uwanaconnect.com/blog" target="_blank">Work 05</a></h3>
+										<span>Uwana Energy Blog</span>
 										<p class="icon">
-											<span><a href="https://burtechproducts.com/" target="_blank"><i class="icon-share3"></i></a></span>
-											<span><a href="https://burtechproducts.com/" target="_blank"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="https://burtechproducts.com/" target="_blank"><i class="icon-heart"></i> 49</a></span>
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/ip.png);border: 1px solid #cdcdcd;">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="https://ip-analyzer-teal.vercel.app/" target="_blank">Work 06</a></h3>
-										<span>IP Analyser</span>
-										<p class="icon">
-											<span><a href="https://ip-analyzer-teal.vercel.app/" target="_blank"><i class="icon-share3"></i></a></span>
-											<span><a href="https://ip-analyzer-teal.vercel.app/" target="_blank"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="https://ip-analyzer-teal.vercel.app/" target="_blank"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://uwanaconnect.com/blog" target="_blank"><i class="icon-share3"></i></a></span>
+											<span><a href="https://uwanaconnect.com/blog" target="_blank"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://uwanaconnect.com/blog" target="_blank"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/qoinpal.png);border: 1px solid #cdcdcd;">
+							<div class="project" style="background-image: url(images/uwana-rewards.png);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://qoinpal-waitlist.vercel.app/" target="_blank">Work 07</a></h3>
-										<span>Qoinpal Waitlist</span>
+										<h3><a href="https://uwanaconnect.com/register" target="_blank">Work 08</a></h3>
+										<span>Uwana Rewards</span>
 										<p class="icon">
-											<span><a href="https://qoinpal-waitlist.vercel.app/" target="_blank"><i class="icon-share3"></i></a></span>
-											<span><a href="https://qoinpal-waitlist.vercel.app/" target="_blank"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="https://qoinpal-waitlist.vercel.app/" target="_blank"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://uwanaconnect.com/register" target="_blank"><i class="icon-share3"></i></a></span>
+											<span><a href="https://uwanaconnect.com/register" target="_blank"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://uwanaconnect.com/register" target="_blank"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/phone.PNG);border: 1px solid #cdcdcd;">
+							<div class="project" style="background-image: url(images/sokozuri-web.png);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://phone-store-one.vercel.app/" target="_blank">Work 08</a></h3>
-										<span>Phone Store</span>
+										<h3><a href="https://www.sokozuri.com/" target="_blank">Work 09</a></h3>
+										<span>Sokozuri</span>
 										<p class="icon">
-											<span><a href="https://phone-store-one.vercel.app/" target="_blank"><i class="icon-share3"></i></a></span>
-											<span><a href="https://phone-store-one.vercel.app/" target="_blank"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="https://phone-store-one.vercel.app/" target="_blank"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://www.sokozuri.com/" target="_blank"><i class="icon-share3"></i></a></span>
+											<span><a href="https://www.sokozuri.com/" target="_blank"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://www.sokozuri.com/" target="_blank"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/mech-express.PNG);border: 1px solid #cdcdcd;">
+							<div class="project" style="background-image: url(images/nupat.PNG);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://mechxpress.vercel.app/" target="_blank">Work 09</a></h3>
-										<span>Mech Xpress</span>
+										<h3><a href="https://nupat.com.ng/" target="_blank">Work 12</a></h3>
+										<span>Nupat Technologies</span>
 										<p class="icon">
-											<span><a href="https://mechxpress.vercel.app/" target="_blank"><i class="icon-share3"></i></a></span>
-											<span><a href="https://mechxpress.vercel.app/" target="_blank"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="https://mechxpress.vercel.app/" target="_blank"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://nupat.com.ng/" target="_blank"><i class="icon-share3"></i></a></span>
+											<span><a href="https://nupat.com.ng/" target="_blank"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://nupat.com.ng/" target="_blank"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
@@ -744,16 +729,31 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/nupat.PNG);border: 1px solid #cdcdcd;">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/ip.png);border: 1px solid #cdcdcd;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://nupat.com.ng/" target="_blank">Work 12</a></h3>
-										<span>Nupat Technologies</span>
+										<h3><a href="https://ip-analyzer-teal.vercel.app/" target="_blank">Work 06</a></h3>
+										<span>IP Analyser</span>
 										<p class="icon">
-											<span><a href="https://nupat.com.ng/" target="_blank"><i class="icon-share3"></i></a></span>
-											<span><a href="https://nupat.com.ng/" target="_blank"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="https://nupat.com.ng/" target="_blank"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://ip-analyzer-teal.vercel.app/" target="_blank"><i class="icon-share3"></i></a></span>
+											<span><a href="https://ip-analyzer-teal.vercel.app/" target="_blank"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://ip-analyzer-teal.vercel.app/" target="_blank"><i class="icon-heart"></i> 49</a></span>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="project" style="background-image: url(images/qoinpal.png);border: 1px solid #cdcdcd;">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="https://qoinpal-waitlist.vercel.app/" target="_blank">Work 07</a></h3>
+										<span>Qoinpal Waitlist</span>
+										<p class="icon">
+											<span><a href="https://qoinpal-waitlist.vercel.app/" target="_blank"><i class="icon-share3"></i></a></span>
+											<span><a href="https://qoinpal-waitlist.vercel.app/" target="_blank"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://qoinpal-waitlist.vercel.app/" target="_blank"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
