--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Ayomide Wilfred</h1>
 						   					<h2>Designing,building,and maintaining APIs and services <a href="#" target="_blank">Ayomide Wilfred Adeyemi</a></h2>
-											   <p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1gyCdeoCSM_0P0CiT1AFMhwy7AJ_PdR6a/view?usp=sharing" target="_blank">Download CV <i class="icon-download4"></i></a></p>
+											   <p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1SPwrrRiwPwyrh9YLh2jMp1pwE5yap12T/view?usp=sharing" target="_blank">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -120,7 +120,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Backend Developer</h1>
-											   <h2>Designing,building,and maintaining APIs and services <a href="https://yourportfolio.com/" target="_blank">Adeyemi Ayomide Wilfred</a></h2>
+											   <h2>Designing,building,and maintaining APIs and services <a href="https://drive.google.com/file/d/1SPwrrRiwPwyrh9YLh2jMp1pwE5yap12T/view?usp=sharing" target="_blank">Adeyemi Ayomide Wilfred</a></h2>
 											   <p><a class="btn btn-primary btn-learn"  href="https://github.com/ayowilfred95/" target="_blank"> Explore My Work <i class="icon-briefcase3"></i></a></p>
 											   
 											</div>
